--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,33 @@
 [versions]
-agp = "8.12.0-alpha02"
-kotlin = "2.0.21"
-coreKtx = "1.10.1"
-junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.8.0"
-composeBom = "2024.09.00"
+agp                   = "8.10.1"         # Android Gradle Plugin – stable, Hedgehog ile uyumlu
+kotlin                = "1.9.23"        # Kotlin 1.9 serisi
+composeBom            = "2024.06.00"    # Kotlin 1.9 ile uyumlu Compose BOM
+coreKtx               = "1.13.1"
+lifecycleRuntimeKtx   = "2.7.0"
+activityCompose       = "1.9.0"
+junit4                = "4.13.2"
+junitExt              = "1.1.5"
+espresso              = "3.5.1"
+foundationLayoutAndroid = "1.6.8"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-core-ktx              = { group = "androidx.core",                 name = "core-ktx",               version.ref = "coreKtx" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle",           name = "lifecycle-runtime-ktx",  version.ref = "lifecycleRuntimeKtx" }
+androidx-activity-compose      = { group = "androidx.activity",            name = "activity-compose",       version.ref = "activityCompose" }
+androidx-compose-bom           = { group = "androidx.compose",             name = "compose-bom",            version.ref = "composeBom" }
+androidx-ui                    = { group = "androidx.compose.ui",          name = "ui" }
+androidx-ui-graphics           = { group = "androidx.compose.ui",          name = "ui-graphics" }
+androidx-ui-tooling            = { group = "androidx.compose.ui",          name = "ui-tooling" }
+androidx-ui-tooling-preview    = { group = "androidx.compose.ui",          name = "ui-tooling-preview" }
+androidx-ui-test-manifest      = { group = "androidx.compose.ui",          name = "ui-test-manifest" }
+androidx-ui-test-junit4        = { group = "androidx.compose.ui",          name = "ui-test-junit4" }
+androidx-material3             = { group = "androidx.compose.material3",   name = "material3" }
 
+junit                          = { group = "junit",                        name = "junit",                  version.ref = "junit4" }
+androidx-junit                 = { group = "androidx.test.ext",            name = "junit",                  version.ref = "junitExt" }
+androidx-espresso-core         = { group = "androidx.test.espresso",       name = "espresso-core",          version.ref = "espresso" }
+androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
 
 [plugins]
-android-application = { id = "com.android.application", version = "8.10.1" }   # ← 8.12-alpha02 yerine
-kotlin-android      = { id = "org.jetbrains.kotlin.android", version = "1.9.24" }
-# kotlin-compose      = { id = "org.jetbrains.kotlin.plugin.compose", version = "1.5.11" }
-
-
+android-application = { id = "com.android.application",    version.ref = "agp" }
+kotlin-android      = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
